fix: fix class hierarchy